# connect4

./: .coverage  .gitignore  README.md  board.py  config.py  main.py  pyproject.toml  test_board.py
docs/: architecture.md
src/: __main__.py  config.py  main.py
src/connect4/: config.py  main.py
src/connect4/controllers/: game_manager.py
src/connect4/models/: match_factory.py  player.py  player_strategies.py
src/connect4/views/: cli_view.py
src/controllers/: game_loop.py  game_manager.py
src/models/: board.py  match_factory.py  player.py  player_strategies.py
src/views/: board_printer.py  cli_view.py
tests/: conftest.py
tests/unit/controllers/: game_manager_test.py
tests/unit/models/: board_test.py  match_factory_test.py  player_strategies_test.py  player_test.py
tests/unit/views/: cli_view_test.py
