[project]
name = "connect4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
play = "src.main:main"
cache_cov = "pytest --cache-clear --cov=src"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
