[project]
name = "connect4"
version = "0.1.0"
description = "Basic CLI version of Connect4"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.2",
    "mutmut>=3.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
play = "connect4.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/connect4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mutmut]
paths_to_mutate = ["src/connect4/"]
runner = "python -m pytest"
mutate_only_covered_lines = true